<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.perfil.PerfilAdmin">

    <Button
        android:id="@+id/button_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Modifica les dades."
        app:layout_constraintEnd_toEndOf="@+id/editTextTime"
        app:layout_constraintStart_toStartOf="@+id/editTextTime"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/text_phone"
        app:layout_constraintStart_toStartOf="@+id/text_phone"
        app:layout_constraintTop_toBottomOf="@+id/text_phone" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="314dp"
        android:layout_height="67dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text|textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/text_time"
        app:layout_constraintStart_toStartOf="@+id/text_time"
        app:layout_constraintTop_toBottomOf="@+id/text_time" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="253dp"
        android:layout_height="73dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text|textPostalAddress|textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/text_adress"
        app:layout_constraintStart_toStartOf="@+id/text_adress"
        app:layout_constraintTop_toBottomOf="@+id/text_adress"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Direcció:"
        app:layout_constraintEnd_toEndOf="@+id/text_header"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/text_header"
        app:layout_constraintTop_toBottomOf="@+id/text_header" />

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Teléfon:"
        app:layout_constraintEnd_toEndOf="@+id/editTextAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Horari:"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <TextView
        android:id="@+id/text_header"
        android:layout_width="371dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:onClick="close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_close_24" />
</androidx.constraintlayout.widget.ConstraintLayout>