...
    <Button
        android:id="@+id/button_activitats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Activitats"
        app:layout_constraintEnd_toEndOf="@+id/button_perfil"
        app:layout_constraintStart_toStartOf="@+id/button_perfil"
        app:layout_constraintTop_toBottomOf="@+id/button_perfil" />

    <Button
        android:id="@+id/button_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="200dp"
        android:text="Perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAdmin" />

    <Button
        android:id="@+id/button_ranking"
...
